# AudioToASS

./: .gitignore  README.md
BDSDKWrap/: .gitignore  CMakeLists.txt  main.cpp
BDSDKWrap/SDKWrap/: Callback.hpp  DLLPublic.h  DefaultCallback.cpp  DefaultCallback.h  ProductId.cpp  ProductId.h  Sdk.cpp  Sdk.h  SdkConfig.cpp  SdkConfig.h
BDSDKWrap/SDKWrap/Message/: CancelMessage.hpp  ErrorMessage.cpp  ErrorMessage.h  Message.cpp  Message.h  PushMessage.cpp  PushMessage.h  ReceiveMessage.hpp  RecognitionEndMessage.hpp  RecognitionStartMessage.hpp  SentenceEndMessage.hpp  SentenceFinishData.cpp  SentenceFinishData.h  SentenceFlushData.cpp  SentenceFlushData.h  SentenceStartMessage.hpp  UnknowMessage.cpp  UnknowMessage.h
DotNetServer/: AudioToAssServer.sln
DotNetServer/AudioToAssServer/: Dockerfile  Program.cs  Startup.cs
DotNetServer/AudioToAssServer/Controllers/: ValuesController.cs
DotNetServer/AudioToAssServer/Properties/: launchSettings.json
Protos/: Project.proto
SpringServer/: settings.gradle
SpringServer/SDKWrapServer/: build.gradle.kts
SpringServer/SDKWrapServer/src/main/kotlin/cn/mx404/audiotoass/: LocalServer.kt
SpringServer/Server/: .gitignore  build.gradle.kts
